bar/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bar
  labels:
    app: bar

spec:
  selector:
    app: bar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
