bar/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
  name: bar

spec:
  host: bar
  subsets:
    - name: stable
      labels:
        app: bar
    - name: canary
      labels:
        app: bar
