bar/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: foobar-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo
spec:
  hosts:
    - foo
  http:
    - route:
        - destination:
            host: foo.foo.svc
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bar
spec:
  hosts:
    - bar
  http:
    - route:
        - destination:
            host: bar.bar.svc
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-postgresql
spec:
  hosts:
    - postgres-postgresql
  http:
    - route:
        - destination:
            host: postgres-postgresql.default.svc
            port:
              number: 80
